Small improvement to AccountNumber that now expose only 'isValid' method, in order to hide internals